[package]
edition = "2021"
authors = ["Genevieve <gen@nyble.dev"]
license-file = "LICENSE"

name = "neam"
version = "0.1.0"
description = "cli tool to scale PNGs with Nearest Neighbor"
repository = "https://github.com/gennyble/neam"

[dependencies]
png = "0.17"
gifed = { git = "https://github.com/gennyble/gifed" }